--- a/NJWeb/web/modules/content/problem/view-problem.xhtml
+++ b/NJWeb/web/modules/content/problem/view-problem.xhtml
@@ -12,97 +12,118 @@
     <ui:define name="metadata">
         <f:metadata>
             <f:viewParam name="idProblem"
-                         value="#{problemsBean.problemView.idProblem}"
-                         required="true"/>
+                         value="#{submitViewBean.problemMessage.idProblem}"
+                         required="true" >
+                <f:validateLongRange minimum="1" maximum="9999999" />
+            </f:viewParam>
             <f:event type="preRenderView"
-                     listener="#{problemsBean.actionPreRenderViewToSubmitProblem}" />
+                     listener="#{submitViewBean.actionPreRenderViewToSubmitProblem}" />
         </f:metadata>
     </ui:define>
 
     <ui:define name="content">
 
-        <ui:fragment rendered="#{problemsBean.problemView.idProblem != 0}">
+        <ui:fragment rendered="#{submitViewBean.problemMessage.idProblem != 0}">
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title text-center">#{utilBean.formatIdProblem(problemsBean.problemView.idProblem)} - #{problemsBean.problemView.nameProblem}</h3>
-                </div>
                 <div class="panel-body">
-                    <div class="form-group">
-                        <h:outputText value="#{problemsBean.pathSourceProblem}" />
-                        <iframe src="#{problemsBean.pathSourceProblem}"
-                                style="width: 100%;"
-                                height="600"
-                                rendered="#{problemsBean.pathSourceProblem != null}"></iframe>
+                    <div class="col-md-7">
+
+                        <div class="form-group">
+                            <iframe src="#{submitViewBean.pathSourceProblem}"
+                                    style="width: 100%;"
+                                    height="550"
+                                    rendered="#{submitViewBean.pathSourceProblem != null}"></iframe>
+                        </div>
                     </div>
-                </div>
-            </div>
-
-
-            <div id="panelMySubmitsContest" class="panel panel-default">
-                <div class="panel panel-default">
-                    <div class="panel-heading"></div>
-                    <div class="panel-body">
-                        <h:form id="formPanelMySubmitsContest" class="form-horizontal">
-
+                    <div class="col-md-5">
+                        <h:form id="form-submit-sourcecode" class="form-horizontal" enctype="multipart/form-data">
                             <fieldset>
                                 <div class="form-group">
-                                    <label for="nameProblem" class="col-md-1 control-label">Problema</label>
-                                    <div class="col-md-5">
+                                    <label for="nameProblem" class="col-md-3 control-label">Problema</label>
+                                    <div class="col-md-9">
                                         <p:inputText id="nameProblem"
                                                      styleClass="form-control"
                                                      readonly="true"
-                                                     value="#{utilBean.formatIdProblem(submitBean.problemView.idProblem)} - #{submitBean.problemView.nameProblem}"/>
+                                                     value="#{utilBean.formatIdProblem(submitViewBean.problemMessage.idProblem)} - #{submitViewBean.problemMessage.nameProblem}"/>
                                     </div>
-                                    <label for="select-2" class="col-md-1 control-label">Lenguaje</label>
-                                    <div class="col-md-5">
-                                        <p:selectOneMenu id="select-2"
+                                </div>
+                                <div class="form-group">
+                                    <label for="complexityProblem" class="col-md-3 control-label">Complejidad sugerida</label>
+                                    <div class="col-md-9">
+                                        <p:inputText id="complexityProblem"
+                                                     styleClass="form-control text-center"
+                                                     readonly="true"
+                                                     value="#{submitViewBean.problemMessage.bestComplexity}"/>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="timeProblem" class="col-md-3 control-label">Limite de tiempo</label>
+                                    <div class="col-md-9">
+                                        <p:inputText id="timeProblem"
+                                                     styleClass="form-control text-center"
+                                                     readonly="true"
+                                                     value="#{submitViewBean.problemMessage.timeLimit} Segundos"/>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="memoProblem" class="col-md-3 control-label">Limite de memoria</label>
+                                    <div class="col-md-9">
+                                        <p:inputText id="memoProblem"
+                                                     styleClass="form-control text-center"
+                                                     readonly="true"
+                                                     value="#{submitViewBean.problemMessage.memoLimit}"/>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="descriptionProblem" class="col-md-3 control-label">Descripcion</label>
+                                    <div class="col-md-9">
+                                        <p:inputTextarea id="descriptionProblem"
+                                                         styleClass="form-control text-center"
+                                                         readonly="true"
+                                                         value="#{(empty submitViewBean.problemMessage.description )?'N/A':submitViewBean.problemMessage.description}" />
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="selectLanguage" class="col-md-3 control-label">Lenguaje</label>
+                                    <div class="col-md-9">
+                                        <p:selectOneMenu id="selectLanguage"
                                                          styleClass="form-control"
                                                          style="width: 100%;"
                                                          converter="languageProgrammingConvertJSF"
-                                                         value="#{submitBean.languageProgrammingView}"
-                                                         required="true" >
+                                                         value="#{submitViewBean.languageProgrammingView}" >
+                                            <f:selectItem value="#{null}" itemLabel="Seleccione un lenguaje" />         
                                             <f:selectItems value="#{languageBean.listLanguageProgrammingItems}" />                                               
                                         </p:selectOneMenu>
                                     </div>
-                                    <label for="problemSolve" class="col-md-1 control-label">Codigo Fuente</label>
-                                    <div class="col-md-5">
-                                        <p:fileUpload id="problemSolve"                                             
+                                </div>
+                                <div class="form-group">
+                                    <label for="uploadSourceCode" class="col-md-3 control-label">Codigo</label>
+                                    <div class="col-md-9">
+                                        <p:fileUpload id="uploadSourceCode"
                                                       styleClass="form-control center-block"
-                                                      value="#{submitBean.codeSourceFile}"
-
+                                                      value="#{submitViewBean.codeSourceFile}"
+                                                      mode="simple"
+                                                      skinSimple="false"
                                                       allowTypes="/(\.|\/)(java|cpp|c)$/"
-                                                      skinSimple="true"
-                                                      required="true"
-                                                      auto="true"
-                                                      label="#{msg['general.label.archivo.upload']}"
-                                                      dragDropSupport="false"
-                                                      update="messages, @form">
-                                        </p:fileUpload>
+                                                      label="#{msg['general.label.archivo.upload']}"/>
                                     </div>
-                                    <div class="col-md-1">
-                                        <p:outputLabel id="labelFileName" styleClass="control-label"
-                                                       rendered="#{submitBean.codeSourceFile != null}" value="#{submitBean.codeSourceFile.fileName}" />                                
-                                    </div>
-
                                 </div>
 
-                                <p:commandButton styleClass="btn btn-default btn-sm center-block text-center col-md-12"
-                                                 value="Enviar"
-                                                 action="#{submitBean.actionSubmitSolution}" 
-                                                 update="messages, @form"/>
+                                <p:messages id="msgs" autoUpdate="true" closable="true"/>
 
+                                <div class="form-group text-center">
+                                    <p:commandButton styleClass="btn btn-default center-block text-center col-md-12"
+                                                     value="Enviar solucion"
+                                                     ajax="false"
+                                                     action="#{submitViewBean.actionSubmitSolution}"
+                                                     update="messages, @form"/>
+                                </div>
                             </fieldset>
-
-                            <p:messages id="messages"
-                                        autoUpdate="true"
-                                        closable="true"/>
-
                         </h:form>
                     </div>
                 </div>
             </div>
-
         </ui:fragment>
-
     </ui:define>
 </ui:composition>
