--- a/NJWeb/web/modules/practice/contest/create.xhtml
+++ b/NJWeb/web/modules/practice/contest/create.xhtml
@@ -11,16 +11,15 @@
 
         <h:form id="form-create-challenge" class="form-horizontal">
             <p:wizard flowListener="#{challengeCreateBean.actionOnFlowProcessCreateChallenge}">
+
+
                 <p:tab id="wizard-tab-01-create-challenge" title="#{msg['challenge.config.create.datos.title']}">
-
                     <div class="panel panel-default">
-
                         <div class="panel-body">
                             <div class="well">
                                 <p:messages id="messages01"
                                             autoUpdate="true"
                                             closable="true" />
-
                                 <div class="panel-body">
                                     <fieldset>
                                         <div class="form-group">
@@ -32,9 +31,15 @@
                                                              required="true"
                                                              value="#{challengeCreateBean.challengeView.nameChallenge}" />
                                             </div>
-                                            <div class="col-md-4"> </div>
+                                            <label for="nameRolAdmin" class="col-md-2 control-label">#{msg['challenge.label.nameOrganizer']}</label>
+                                            <div class="col-md-4">
+                                                <p:inputText id="nameRolAdmin"
+                                                             styleClass="form-control"
+                                                             placeholder="#{msg['challenge.label.nameOrganizer']}"
+                                                             required="true"
+                                                             value="#{challengeCreateBean.challengeView.emailOrganizer}" />
+                                            </div>
                                         </div>
-
                                         <div class="form-group">
                                             <label for="dateChallengeStart" class="col-md-2 control-label">#{msg['challenge.label.dateChallenge.start']}</label>
                                             <div class="col-md-4">
@@ -58,7 +63,6 @@
                                                 </p:selectOneMenu>
                                             </div>
                                         </div>
-
                                         <div class="form-group">
                                             <label for="dateChallengeEnd" class="col-md-2 control-label">#{msg['challenge.label.dateChallenge.end']}</label>
                                             <div class="col-md-4">
@@ -161,19 +165,25 @@
                                             <h:outputText value="#{utilBean.formatIdProblem(p.idProblem)}" />
                                         </p:column>
                                         <p:column headerText="Problem" width="200" sortBy="#{p.nameProblem}">
-                                            <h:commandLink value="#{p.nameProblem}" action="#{problemsBean.actionRedirectViewToSubmitProblem}">
-                                                <f:setPropertyActionListener target="#{problemsBean.problemView.idProblem}" value="#{p.idProblem}" />
+                                            <h:commandLink value="#{p.nameProblem}" action="#{problemCreateBean.actionRedirectViewToSubmitProblem}">
+                                                <f:setPropertyActionListener target="#{pproblemBeanproblemView.idProblem}" value="#{p.idProblem}" />
                                             </h:commandLink>
                                         </p:column>
                                         <p:column headerText="Autor" width="240" sortBy="#{p.author}" filterBy="#{p.author}" filterStyle="display:none;" filterMatchMode="contains">
                                             <h:outputText value="#{p.author}" />
                                         </p:column>
-                                        <p:column headerText="TL" width="80" sortBy="#{p.timeLimitSeg}" filterBy="#{p.timeLimitSeg}" filterStyle="display:none;" >
-                                            <h:outputText value="#{p.timeLimitSeg}" />
+                                        <p:column headerText="Categoria" width="200" styleClass="text-left" >
+                                            <ui:repeat var="c" value="#{p.listCategoryMessage.list}" varStatus="unitcategory" >
+                                                <h:outputText styleClass="label #{c.idCategory eq 1? 'label-success':
+                                                                                  c.idCategory eq 2? 'label-info':
+                                                                                  c.idCategory eq 3? 'label-default':
+                                                                                  c.idCategory eq 4? 'label-danger':
+                                                                                  c.idCategory eq 5? 'label-primary':
+                                                                                  c.idCategory eq 6? 'label-warning':
+                                                                                  'label-info'}" value="#{c.nameCategory} " /> 
+                                            </ui:repeat>
                                         </p:column>
-                                        <p:column headerText="Categoria" width="200" sortBy="#{p.nameCategory}"  filterBy="#{p.nameCategory}" filterStyle="display:none;" filterMatchMode="contains">
-                                            <h:outputText value="#{p.nameCategory}" />
-                                        </p:column>
+
                                         <p:column headerText="Dificultad" width="200" sortBy="#{p.nameDifficulty}"  filterBy="#{p.nameDifficulty}" filterStyle="display:none;" filterMatchMode="contains">
                                             <h:outputText value="#{p.nameDifficulty}" />
                                         </p:column>
@@ -216,13 +226,48 @@
                                 <div class="panel-body">
                                     <fieldset>
                                         <div class="form-group">
-                                            <label for="outputNameChallenge" class="col-md-2 control-label">#{msg['challenge.label.nameChallenge']}</label>
-
+                                            <label for="nameChallengeOutput" class="col-md-2 control-label">#{msg['challenge.label.nameChallenge']}</label>
                                             <div class="col-md-4">
-                                                <p:outputLabel id="outputNameChallenge"
-                                                               styleClass="form-control"
-                                                               value="#{challengeCreateBean.challengeView.nameChallenge}" />
-
+                                                <p:inputText id="nameChallengeOutput"
+                                                             styleClass="form-control"
+                                                             readonly="true"
+                                                             value="#{challengeCreateBean.challengeView.nameChallenge}" />
+                                            </div>
+                                            <label for="nameAuthorOutput" class="col-md-2 control-label">#{msg['challenge.label.nameOrganizer']}</label>
+                                            <div class="col-md-4">
+                                                <p:inputText id="nameAuthorOutput"
+                                                             styleClass="form-control"                                                         
+                                                             readonly="true"
+                                                             value="#{challengeCreateBean.challengeView.emailOrganizer}" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="dateChallengeStartCompleteOutput" class="col-md-2 control-label">#{msg['challenge.label.dateChallenge.start']}</label>
+                                            <div class="col-md-4">
+                                                <p:inputText id="dateChallengeStartCompleteOutput"
+                                                             styleClass="form-control"
+                                                             readonly="true"
+                                                             value="#{challengeCreateBean.textDateStartChallenge}" />
+                                            </div>
+                                            <label for="dateChallengeEndCompleteOutput" class="col-md-2 control-label">#{msg['challenge.label.timeChallenge.start']}</label>
+                                            <div class="col-md-4">
+                                                <p:inputText id="dateChallengeEndCompleteOutput"
+                                                             styleClass="form-control"
+                                                             readonly="true"
+                                                             value="#{challengeCreateBean.textDateEndChallenge}" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="descriptionChallengeOutput" class="col-md-2 control-label">#{msg['challenge.label.descriptionChallenge']}</label>
+                                            <div class="col-md-10">
+                                                <p:inputTextarea id="descriptionProblemOutput"
+                                                                 rows="4"
+                                                                  styleClass="form-control"
+                                                                 style="width: 100%;"
+                                                                 autoResize="false" 
+                                                                 placeholder="#{msg['challenge.label.descriptionChallenge.placeholder']}"
+                                                                 readonly="true" 
+                                                                 value="#{challengeCreateBean.challengeView.description}" />
                                             </div>
                                         </div>
                                     </fieldset>
@@ -235,7 +280,85 @@
                         <div class="panel-body">
                             <div class="well">
                                 <div class="panel-body">
-                                    UNO
+                                    <p:dataTable id="table-problems-contest-selected"
+                                                 var="p"
+                                                 widgetVar="cpWidgetVar"
+                                                 tableStyleClass="table table-striped table-hover"
+                                                 value="#{challengeCreateBean.listProblemsSelectedFinally}"
+                                                 styleClass="center-block"
+                                                 rowKey="#{p.idProblem}"
+                                                 paginator="true"
+                                                 paginatorPosition="bottom"
+                                                 emptyMessage="#{msg['general.table.noinfo']}">
+                                        <f:facet name="header">
+                                            <p:outputPanel>
+                                                <div class="form-group">
+                                                    <div class="input-group">
+                                                        <span class="input-group-addon">
+                                                            <span class="glyphicon glyphicon-search" aria-hidden="true" />
+                                                        </span>
+                                                        <p:inputText id="globalFilter" styleClass="form-control" onkeyup="PF('cpWidgetVar').filter();" placeholder="Parametros de busqueda" value="#{challengeCreateBean.searchParameter}"/>
+                                                    </div>
+                                                </div>
+                                            </p:outputPanel>
+                                        </f:facet>
+
+                                        <p:column headerText="" width="25">                                   
+                                            <p:selectBooleanCheckbox value="#{challengeCreateBean.mapProblemsSelected[ p.idProblem ]}" >
+                                                <p:ajax listener="#{challengeCreateBean.actionUpdateListenerProblemsSelected}" update="@form" />
+                                            </p:selectBooleanCheckbox>
+                                        </p:column>
+                                        <p:column headerText="Id" width="80" sortBy="#{p.idProblem}" filterStyle="display:none;" >
+                                            <h:outputText value="#{utilBean.formatIdProblem(p.idProblem)}" />
+                                        </p:column>
+                                        <p:column headerText="Problem" width="200" sortBy="#{p.nameProblem}">
+                                            <h:commandLink value="#{p.nameProblem}" action="#{problemCreateBean.actionRedirectViewToSubmitProblem}">
+                                                <f:setPropertyActionListener target="#{pproblemBeanproblemView.idProblem}" value="#{p.idProblem}" />
+                                            </h:commandLink>
+                                        </p:column>
+                                        <p:column headerText="Autor" width="240" sortBy="#{p.author}" filterBy="#{p.author}" filterStyle="display:none;" filterMatchMode="contains">
+                                            <h:outputText value="#{p.author}" />
+                                        </p:column>
+                                        <p:column headerText="Categoria" width="200" styleClass="text-left" >
+                                            <ui:repeat var="c" value="#{p.listCategoryMessage.list}" varStatus="unitcategory" >
+                                                <h:outputText styleClass="label #{c.idCategory eq 1? 'label-success':
+                                                                                  c.idCategory eq 2? 'label-info':
+                                                                                  c.idCategory eq 3? 'label-default':
+                                                                                  c.idCategory eq 4? 'label-danger':
+                                                                                  c.idCategory eq 5? 'label-primary':
+                                                                                  c.idCategory eq 6? 'label-warning':
+                                                                                  'label-info'}" value="#{c.nameCategory} " /> 
+                                            </ui:repeat>
+                                        </p:column>
+
+                                        <p:column headerText="Dificultad" width="200" sortBy="#{p.nameDifficulty}"  filterBy="#{p.nameDifficulty}" filterStyle="display:none;" filterMatchMode="contains">
+                                            <h:outputText value="#{p.nameDifficulty}" />
+                                        </p:column>
+                                        <p:column headerText="AC" width="30" style="text-align: center !important;" sortBy="#{p.statusAC}" >
+                                            <h:outputText value="#{p.statusAC}" />
+                                        </p:column>
+                                        <p:column headerText="WR" width="30" style="text-align: center !important;" sortBy="#{p.statusWR}" >
+                                            <h:outputText value="#{p.statusWR}" />
+                                        </p:column>
+                                        <p:column headerText="TL" width="30" style="text-align: center !important;" sortBy="#{p.statusTL}" >
+                                            <h:outputText value="#{p.statusTL}" />
+                                        </p:column>
+                                        <p:column headerText="RE" width="30" style="text-align: center !important;" sortBy="#{p.statusRE}" >
+                                            <h:outputText value="#{p.statusRE}" />
+                                        </p:column>
+                                        <p:column headerText="CE" width="30" style="text-align: center !important;" sortBy="#{p.statusCE}" >
+                                            <h:outputText value="#{p.statusCE}" />
+                                        </p:column>
+                                        <p:column headerText="CS" width="30" style="text-align: center !important;" sortBy="#{p.statusCS}" >
+                                            <h:outputText value="#{p.statusCS}" />
+                                        </p:column>
+                                        <p:column headerText="IP" width="30" style="text-align: center !important;" sortBy="#{p.statusIP}" >
+                                            <h:outputText value="#{p.statusIP}" />
+                                        </p:column>
+                                        <p:column headerText="Total" width="30" style="text-align: center !important;" sortBy="#{p.totalStatus}" >
+                                            <h:outputText value="#{p.totalStatus}" />
+                                        </p:column>
+                                    </p:dataTable>
                                 </div>
                             </div>
                         </div>
